--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -38,10 +38,11 @@
                             <li class="submenu">
                                 <a href="javascript:;">Categorías</a>
                                 <ul>
-                                    <li><a href="#">Hombre</a></li>
-                                    <li><a href="#">Mujer</a></li>
-                                    <li><a href="#">Niños</a></li>
-                                    <li><a href="#">Bebes</a></li>
+                                    <li><a class="categoria_menu" id_categoria_menu="1">Hombre</a></li>
+                                    <li><a class="categoria_menu" id_categoria_menu="2">Mujer</a></li>
+                                    <li><a class="categoria_menu" id_categoria_menu="3">Niños</a></li>
+                                    <li><a class="categoria_menu" id_categoria_menu="4">Adolescentes</a></li>
+                                    <li><a class="categoria_menu" id_categoria_menu="5">Bebes</a></li>
                                 </ul>
                             </li>
                             <li class="submenu">
