--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -28,6 +28,7 @@
     <!-- JavaScript MVC files -->
     <script src = "view/js/ajaxpromise.js"></script>
     <script src = "module/home/model/ctrl_home.js"></script>
+    <script src = "view/js/menu.js"></script>
     <!-- OWL CAROUSEL -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"> -->
@@ -38,6 +39,7 @@
     <!-- CSS MIO -->
     <link rel="stylesheet" type="text/css" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
+    <link rel="stylesheet" href="view/css/global.css">
 
     <title>Segunda Jugada</title>
     <link rel="icon" type="image/png" href="view/images/web-logo/favicon.png">
