--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -27,6 +27,7 @@
     <!-- JavaScript MVC files -->
     <script src="view/js/ajaxpromise.js"></script>
     <script src="module/shop/model/ctrl_shop.js"></script>
+    <script src = "view/js/menu.js"></script>
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" type="text/css" href="view/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
@@ -41,6 +42,7 @@
     <link rel="stylesheet" href="view/css/styles.css">
     <link rel="stylesheet" href="view/css/menu.css">
     <link rel="stylesheet" href="view/css/shop.css">
+    <link rel="stylesheet" href="view/css/global.css">
     <!-- CSS LEAFLET -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
