--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -28,6 +28,7 @@
     <script src="view/js/ajaxpromise.js"></script>
     <script src="module/shop/model/ctrl_shop.js"></script>
     <script src = "view/js/menu.js"></script>
+    <script src="module/search/model/ctrl_search.js"></script>
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" type="text/css" href="view/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
