ADD marca & ciudad filtros

--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -50,7 +50,7 @@ body {
     margin: 10px 0;
 }
 
-.filtro_tipo, .filtro_categoria, .filtro_precio, .f_precio, .f_tipo, .f_categoria, .f_equipo, .filtro_equipo {
+.filtro_tipo, .filtro_categoria, .filtro_precio, .f_precio, .f_tipo, .f_categoria, .f_equipo, .filtro_equipo, .filtro_marca, .f_marca, .filtro_ciudad, .f_ciudad {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -63,7 +63,7 @@ body {
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.filtro_tipo:focus, .filtro_categoria:focus, .filtro_precio:focus, .filtro_equipo:focus {
+.filtro_tipo:focus, .filtro_categoria:focus, .filtro_precio:focus, .filtro_equipo:focus, .filtro_marca:focus, .filtro_ciudad:focus {
     border-color: goldenrod;
     box-shadow: 0 0 8px orange;
     outline: none;
@@ -73,7 +73,7 @@ body {
     width:8%;
 }
 
-.f_precio:hover, .f_tipo:hover, .f_categoria:hover, .f_equipo:hover{
+.f_precio:hover, .f_tipo:hover, .f_categoria:hover, .f_equipo:hover, .f_marca:hover, .f_ciudad:hover{
     border-color: goldenrod;
     box-shadow: 0 0 8px orange;
     outline: none;
@@ -96,11 +96,11 @@ body {
     margin-top:3%;
 }
 
-.options-tipo, .options-categoria, .radio-precio, .checkbox-equipo{
+.options-tipo, .options-categoria, .radio-precio, .checkbox-equipo, .options-marca, .options-ciudad{
     display:none;
 }
 
-.desplegable-tipo, .desplegable-categoria, .desplegable-precio, .desplegable-equipo{
+.desplegable-tipo, .desplegable-categoria, .desplegable-precio, .desplegable-equipo, .desplegable-marca, .desplegable-ciudad{
     cursor:pointer;
 }
 
