--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -6,6 +6,9 @@
         </div> <!-- end .container-productos -->
 </div> <!-- end .container-shop-list -->
 
+<!-- PAGINACION -->
+<div id="paginacion" class="paginacion"></div>
+
 <!-- DETAILS -->
 <div class="container-details" id="cont-det">
     <div class="prodsimg">
