--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <!-- BOOTPAG -->
+    <script src="view/js/jquery.bootpag.js"></script>
+    <!-- <script src="view/js/jquery.bootpag.min.js"></script> -->
     <!-- CAROUSEL GLIDER -->
     <link rel="stylesheet" href="view/css/glider.css">
     <link rel="stylesheet" href="view/css/glider.min.css">
@@ -32,7 +35,7 @@
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" type="text/css" href="view/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
