--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -277,3 +277,37 @@ body {
 .inf-producto-details{
     text-align:left;
 }
+
+/* BOTONES DE LA PAGINACION */
+
+.pagina {
+    width: 40px;
+    height: 40px;
+    margin: 5px;
+    border: 2px solid goldenrod;
+    border-radius: 50%; /* Hace que los botones sean redondos */
+    background-color: white;
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 36px; /* Centra el texto verticalmente */
+    cursor: pointer;
+    transition: all 0.3s ease; /* Animación suave */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.pagina:hover {
+    background-color: orange;
+    color: white;
+    border-color: goldenrod;
+    box-shadow: 0 0 10px orange;
+    transform: scale(1.1); /* Aumenta ligeramente el tamaño */
+}
+
+.pagina.active {
+    background-color: goldenrod;
+    color: white;
+    border-color: orange;
+    box-shadow: 0 0 10px goldenrod;
+}
