CONT productos relacionados 2

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -16,6 +16,7 @@
     </div>
     <div class="inf-details" id="container-date-img"> </div>
 </div>
+<div class="details_productos_relacionados"></div>
 
 <!-- LEAFLET (MAPA) -->
 <div class="mapLeafleft"></div>
