RENEW details style

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -16,7 +16,11 @@
     </div>
     <div class="inf-details" id="container-date-img"> </div>
 </div>
-<div class="details_productos_relacionados"></div>
+<div class="details_productos_relacionados">
+    <div class="titulo-productos-relacionados"></div>
+    <div class="cargar-prelacionados"></div>
+    <div class="boton-cargar-mas-productos"></div>
+</div>
 
 <!-- LEAFLET (MAPA) -->
 <div class="mapLeafleft"></div>
