--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -239,8 +239,10 @@ body {
 }
 
 .inf-details {
-    flex: 1;
-    padding: 20px;
+    width: 45%;
+    text-align:left;
+    float: left;
+    box-sizing: border-box;
 }
 
 .precio-details {
