--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -339,11 +339,13 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
     cursor: pointer;
-    width: 100%; /* Asegura que ocupe el ancho del contenedor */
-    height: 300px; /* Altura fija para todos los recuadros */
+    width: 80%; /* Reduce el tamaño del recuadro */
+    height: 100%;
+    aspect-ratio: 1 / 1; /* Mantiene la proporción cuadrada */
     display: flex;
     flex-direction: column;
-    justify-content: space-between; /* Distribuye el contenido verticalmente */
+    justify-content: space-between;
+    margin: 0 auto; /* Centra el recuadro dentro de su columna */
 }
 
 .prelacionado-producto:hover {
@@ -351,23 +353,35 @@ body {
     box-shadow: 0 0 10px orange;
 }
 
+.prelacionado-img {
+    width: 100%;
+    height: 65%; /* Ajusta la altura de la imagen */
+    overflow: hidden;
+}
+
 .prelacionado-img img {
     width: 100%;
-    height: 150px; /* Altura fija para las imágenes */
-    object-fit: cover; /* Ajusta la imagen sin deformarla */
+    height: 100%;
+    object-fit: cover;
     border-bottom: 2px solid goldenrod;
 }
 
 .prelacionado-item {
     padding: 10px;
     text-align: center;
-    flex-grow: 1; /* Permite que el contenido crezca para llenar el espacio */
+    flex-grow: 1;
+    height: 35%; /* Ajusta la altura del texto */
 }
 
 .prelacionado-item h5 {
     font-size: 16px;
     color: #333;
     margin: 10px 0;
+}
+
+.prelacionado-precio{
+    font-weight: bolder;
+    color:orange;
 }
 
 .prelacionado-item p {
