--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -50,7 +50,7 @@ body {
     margin: 10px 0;
 }
 
-.filtro_tipo, .filtro_categoria, .filtro_precio, .f_precio, .f_tipo, .f_categoria, .f_equipo, .filtro_equipo, .filtro_marca, .f_marca, .filtro_ciudad, .f_ciudad, .f_visitas, .filtro_visitas {
+.filtro_tipo, .filtro_categoria, .filtro_precio, .f_orderby, .f_tipo, .f_categoria, .f_equipo, .filtro_equipo, .filtro_marca, .f_marca, .filtro_ciudad, .f_ciudad, .f_visitas, .filtro_visitas {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -73,7 +73,7 @@ body {
     width:8%;
 }
 
-.f_precio:hover, .f_tipo:hover, .f_categoria:hover, .f_equipo:hover, .f_marca:hover, .f_ciudad:hover, .filtro_visitas:hover{
+.f_orderby:hover, .f_tipo:hover, .f_categoria:hover, .f_equipo:hover, .f_marca:hover, .f_ciudad:hover, .filtro_visitas:hover{
     border-color: goldenrod;
     box-shadow: 0 0 8px orange;
     outline: none;
@@ -100,7 +100,7 @@ body {
     display:none;
 }
 
-.desplegable-tipo, .desplegable-categoria, .desplegable-precio, .desplegable-equipo, .desplegable-marca, .desplegable-ciudad, .desplegable_visitas{
+.desplegable-tipo, .desplegable-categoria, .desplegable-orderby, .desplegable-equipo, .desplegable-marca, .desplegable-ciudad, .desplegable_visitas{
     cursor:pointer;
 }
 
