ADD popular carousel home & salto

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -36,8 +36,14 @@
 
 <!-- ACCESORIOS -->
  <div class="home-demo">
-    <h3 id="title-carousel-accesorio">Mejora tus habilidades en el campo con nuestra variedad de accesorios</h3>
+    <h3 id="title-carousel-accesorio">Descubre nuestra variedad de accesorios</h3>
     <div class="owl-carousel owl-theme carousel-accesorio"></div>
  </div>
+
+ <!-- POPULARIDAD -->
+<div class="home-demo">
+    <h3 id="title-carousel-popularidad">Echale un vistazo a nuestros productos más populares</h3>
+    <div class="owl-carousel owl-theme carousel-popular"></div>
+</div>
 
 </section>
