ADD icon location details

--- a/view/css/styles.css
+++ b/view/css/styles.css
@@ -15,7 +15,7 @@
     margin-left:20%;
 }
 
-.div_categoria, .div_tipo, .div_producto, .div_accesorio{
+.div_categoria, .div_tipo, .div_producto, .div_accesorio, .div_popular{
     margin-top:4%;
 }
 
@@ -55,8 +55,8 @@
     margin-top: 10%;
 }
 
-#title-carousel-home, #title-carousel-tipo, #title-carousel-producto, #title-carousel-accesorio{
-    margin-left: 15%;
+#title-carousel-home, #title-carousel-tipo, #title-carousel-producto, #title-carousel-accesorio, #title-carousel-popularidad{
+    text-align: center;
 }
 
 .div_producto img, .div_accesorio img{
@@ -67,4 +67,68 @@
 
 #title-categoria{
     margin-top:3%;
+}
+
+.carousel-home .div_marca,
+.carousel-tipo .div_tipo,
+.carousel-producto .div_producto,
+.carousel-accesorio .div_accesorio,
+.carousel-popular .div_popular {
+    background-color: white;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease-in-out;
+    cursor: pointer;
+    width: 250px; /* Aumenta el ancho del cuadrado */
+    height: 250px; /* Aumenta el alto del cuadrado */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px auto; /* Ajusta el margen */
+}
+
+.carousel-home .div_marca:hover,
+.carousel-tipo .div_tipo:hover,
+.carousel-producto .div_producto:hover,
+.carousel-accesorio .div_accesorio:hover,
+.carousel-popular .div_popular:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 10px orange;
+    border-color: goldenrod;
+}
+
+.carousel-home .div_marca img,
+.carousel-tipo .div_tipo img,
+.carousel-producto .div_producto img,
+.carousel-accesorio .div_accesorio img,
+.carousel-popular .div_popular img {
+    width: 100%;
+    height: 75%; /* Ajusta la imagen para ocupar más espacio */
+    object-fit: cover;
+    border-bottom: 2px solid goldenrod;
+}
+
+.carousel-home .div_marca h5,
+.carousel-tipo .div_tipo h5,
+.carousel-producto .div_producto h5,
+.carousel-accesorio .div_accesorio h5,
+.carousel-popular .div_popular h5 {
+    font-size: 18px; /* Aumenta el tamaño del texto */
+    color: #333;
+    text-align: center;
+    margin: 10px 0;
+    font-weight: bold;
+    text-transform: uppercase;
+    line-height: 1.2;
+}
+
+.carousel-home .div_marca:hover h5,
+.carousel-tipo .div_tipo:hover h5,
+.carousel-producto .div_producto:hover h5,
+.carousel-accesorio .div_accesorio:hover h5,
+.carousel-popular .div_popular:hover h5 {
+    color: orange;
+    text-shadow: 0 0 5px goldenrod;
 }
