--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -281,6 +281,34 @@ body {
     margin-right: 1%;
 }
 
+.icon-container-details-location {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(42, 42, 42);
+    border-radius: 10px;
+    box-shadow: 8px 8px 12px rgba(0, 0, 0, 0.1);
+    margin-right: 1%;
+    position: relative;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.location-icon-details {
+    font-size: 13px;
+    color: white;
+    text-align: center;
+    line-height: 1.2;
+    margin-top: 5px;
+    position: static;
+}
+
+.fa-location-dot{
+    margin-right: 5px;
+}
+
 .icon-container-details i {
     font-size: 24px;
     color: white;
