ADD vistas login/register

--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -48,8 +48,8 @@
                             <li class="submenu">
                                 <a href="javascript:;"><img src="view/images/top-page/user.svg" id="user-icon">Cuenta</a>
                                 <ul>
-                                    <li><a href="#">Iniciar sesión</a></li>
-                                    <li><a href="#">Registrarse</a></li>
+                                    <li><a href="index.php?module=ctrl_auth&op=login">Iniciar sesión</a></li>
+                                    <li><a href="index.php?module=ctrl_auth&op=register">Registrarse</a></li>
                                 </ul>
                             </li>
                             <!-- <li class="scroll-to-section"><a href="#explore">Iniciar sesión / Registrarse</a></li> -->
