--- a/view/inc/top_page_auth.html
+++ b/view/inc/top_page_auth.html
@@ -28,6 +28,8 @@
     <!-- JavaScript MVC files -->
     <script src = "view/js/ajaxpromise.js"></script>
     <script src = "view/js/menu.js"></script>
+    <script src = "module/AUTH/model/ctrl_login.js"></script>
+    <script src = "module/AUTH/model/ctrl_register.js"></script>
     <!-- CSS MIO -->
     <link rel="stylesheet" href="view/css/menu.css">
     <link rel="stylesheet" href="view/css/global.css">
