--- a/module/AUTH/view/login.html
+++ b/module/AUTH/view/login.html
@@ -3,11 +3,13 @@
     <form class="login-form">
         <div class="form-group">
             <label for="username">Usuario / Correo electrónico</label>
-            <input type="text" id="username" name="username" placeholder="Introduce tu usuario o correo electrónico" required>
+            <input type="text" id="username" name="username" placeholder="Introduce tu usuario o correo electrónico">
+            <span id="error_username_log" class="error"></span>
         </div>
         <div class="form-group">
             <label for="password">Contraseña</label>
-            <input type="password" id="password" name="password" placeholder="Introduce tu contraseña" required>
+            <input type="password" id="password" name="password" placeholder="Introduce tu contraseña">
+            <span id="error_pwd_log" class="error"></span>
         </div>
         <button type="submit" class="login-button">Iniciar Sesión</button>
         <button type="button" class="google-login-button">
