--- a/module/AUTH/view/register.html
+++ b/module/AUTH/view/register.html
@@ -3,19 +3,23 @@
     <form class="register-form">
         <div class="form-group-register">
             <label for="username">Usuario</label>
-            <input type="text" id="username-register" name="username-register" placeholder="Introduce tu usuario" required>
+            <input type="text" id="username_reg" name="username_reg" placeholder="Introduce tu usuario">
+            <span id="error_username_reg" class="error"></span>
         </div>
         <div class="form-group-register">
             <label for="email">Correo Electrónico</label>
-            <input type="email" id="email-register" name="email-register" placeholder="Introduce tu correo electrónico" required>
+            <input type="email" id="email_reg" name="email_reg" placeholder="Introduce tu correo electrónico">
+            <span id="error_email_reg" class="error"></span>
         </div>
         <div class="form-group-register">
             <label for="password">Contraseña</label>
-            <input type="password" id="password-register" name="password-register" placeholder="Introduce tu contraseña" required>
+            <input type="password" id="pwd1_reg" name="pwd1_reg" placeholder="Introduce tu contraseña">
+            <span id="error_pwd1_reg" class="error"></span>
         </div>
         <div class="form-group-register">
             <label for="confirm-password">Confirmar Contraseña</label>
-            <input type="password" id="confirm-password-register" name="confirm-password-register" placeholder="Confirma tu contraseña" required>
+            <input type="password" id="pwd2_reg" name="pwd2_reg" placeholder="Confirma tu contraseña">
+            <span id="error_pwd2_reg" class="error"></span>
         </div>
         <button type="submit" class="register-button">Registrarse</button>
         <button type="button" class="google-login-button">
