ADD register db

--- a/module/AUTH/view/login.html
+++ b/module/AUTH/view/login.html
@@ -16,6 +16,6 @@
             <img src="view/images/icons/google-icon.webp" alt="Google Logo">
             Iniciar sesión con Google
         </button>
-        <p class="register-link">¿No tienes cuenta? <a href="index.php?module=ctrl_auth&op=register">Regístrate aquí</a></p>
+        <p class="register-link">¿No tienes cuenta? <a href="index.php?module=ctrl_auth&op=register-view">Regístrate aquí</a></p>
     </form>
 </div>
