--- a/module/AUTH/view/register.html
+++ b/module/AUTH/view/register.html
@@ -1,6 +1,6 @@
 <div class="register-container">
     <h1 class="register-title">Registro</h1>
-    <form class="register-form">
+    <form class="register-form" method="POST">
         <div class="form-group-register">
             <label for="username">Usuario</label>
             <input type="text" id="username_reg" name="username_reg" placeholder="Introduce tu usuario">
@@ -26,6 +26,6 @@
             <img src="view/images/icons/google-icon.webp" alt="Google Logo">
             Registrarse con Google
         </button>
-        <p class="login-link">¿Ya tienes cuenta? <a href="index.php?module=ctrl_auth&op=login">Inicia sesión aquí</a></p>
+        <p class="login-link">¿Ya tienes cuenta? <a href="index.php?module=ctrl_auth&op=login-view">Inicia sesión aquí</a></p>
     </form>
 </div>
