ADD login f-token

--- a/module/AUTH/view/login.html
+++ b/module/AUTH/view/login.html
@@ -1,6 +1,6 @@
 <div class="login-container">
     <h1 class="login-title">Iniciar Sesión</h1>
-    <form class="login-form">
+    <form class="login-form" method="POST">
         <div class="form-group">
             <label for="username">Usuario / Correo electrónico</label>
             <input type="text" id="username" name="username" placeholder="Introduce tu usuario o correo electrónico">
