ADD login with menu

--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -45,12 +45,8 @@
                                     <li><a class="categoria_menu" id_categoria_menu="5">Bebes</a></li>
                                 </ul>
                             </li>
-                            <li class="submenu">
-                                <a href="javascript:;"><img src="view/images/top-page/user.svg" id="user-icon">Cuenta</a>
-                                <ul>
-                                    <li><a href="index.php?module=ctrl_auth&op=login-view">Iniciar sesión</a></li>
-                                    <li><a href="index.php?module=ctrl_auth&op=register-view">Registrarse</a></li>
-                                </ul>
+                            <li class="submenu submenu-cuenta">
+                                
                             </li>
                             <!-- <li class="scroll-to-section"><a href="#explore">Iniciar sesión / Registrarse</a></li> -->
                         </ul>        
