--- a/view/inc/menu.html
+++ b/view/inc/menu.html
@@ -26,7 +26,7 @@
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.php" class="active">Home</a></li>
                             <li class="scroll-to-section" id="page-productos"><a href="index.php?module=ctrl_shop&op=list">Productos</a></li>
-                            <li class="submenu">
+                            <!-- <li class="submenu">
                                 <a href="javascript:;">Paginas</a>
                                 <ul>
                                     <li><a href="about.html">Sobre nosotros</a></li>
@@ -34,7 +34,7 @@
                                     <li><a href="single-product.html">Single Product</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                 </ul>
-                            </li>
+                            </li> -->
                             <li class="submenu">
                                 <a href="javascript:;">Categorías</a>
                                 <ul>
