EXAMEN home/shop

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -46,4 +46,22 @@
     <div class="owl-carousel owl-theme carousel-popular"></div>
 </div>
 
+<!-- PRODUCTOS MEJOR VALORADOS (RATING) -->
+<div class="home-demo">
+    <h3 id="title-carousel-rating">Nuestros productos mejor valorados</h3>
+    <div class="owl-carousel owl-theme carousel-rating"></div>
+</div>
+
+<!-- CATEGORIAS MAS VISTAS -->
+<div class="home-demo">
+    <h3 id="title-carousel-rating-categoria">Nuestras categorias mas visitadas</h3>
+    <div class="owl-carousel owl-theme carousel-rating-categoria"></div>
+</div>
+
+<!-- TIPOS MAS VISTOS -->
+<div class="home-demo">
+    <h3 id="title-carousel-rating-tipo">Nuestros tipos de productos mas visitados</h3>
+    <div class="owl-carousel owl-theme carousel-rating-tipo"></div>
+</div>
+
 </section>
