ADD credenciales db ini

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -15,6 +15,7 @@
         <div class="owl-carousel owl-theme productos_img" id="container-date-img"> </div>
     </div>
     <div class="inf-details" id="container-date-img"> </div>
+    <div class="down-details"></div>
 </div>
 <div class="details_productos_relacionados">
     <div class="titulo-productos-relacionados"></div>
