--- a/view/css/shop.css
+++ b/view/css/shop.css
@@ -221,7 +221,7 @@ body {
 
 .productos_img {
     width: 100%;
-    height: 100%;
+    height: 80%;
     object-fit: contain;
 }
 
@@ -314,22 +314,54 @@ body {
     color: white;
 }
 
+.cat_tip_details {
+    margin-top: 10px; /* Espaciado desde las imágenes */
+    text-align: center; /* Centrar el contenido */
+    width: 100%; /* Asegurar que ocupe todo el ancho del contenedor */
+    background-color: goldenrod; /* Fondo dorado */
+    padding: 5px; /* Espaciado interno */
+    border-radius: 5px; /* Bordes redondeados */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Sombra opcional */
+    color: white; /* Texto blanco */
+    font-weight: bold; /* Negrita para el texto */
+}
+
+/* Estilo para los enlaces dentro de cat_tip_details */
 .cat_tip_details a {
-    color: goldenrod;
-    background-color: whitesmoke;
+    color: white; /* Texto blanco */
     text-decoration: none; /* Sin subrayado */
-    font-size: 14px; /* Reducir el tamaño de la fuente */
-    margin: 3px 0; /* Reducir el margen */
+    font-size: 14px; /* Tamaño de fuente */
+    margin: 5px 0; /* Espaciado entre enlaces */
     display: inline-block; /* Mostrar los enlaces en línea */
-    padding: 3px 8px; /* Reducir el padding */
-    border-radius: 3px; /* Bordes redondeados más pequeños */
+    padding: 3px 8px; /* Espaciado interno */
+    border-radius: 3px; /* Bordes redondeados */
     transition: background-color 0.3s ease; /* Transición suave */
 }
 
+/* Hover para los enlaces */
 .cat_tip_details a:hover {
     background-color: orange; /* Cambiar el fondo al pasar el cursor */
     color: white; /* Mantener el texto blanco */
-    box-shadow: 0 0 5px orange; /* Efecto de brillo más sutil */
+    box-shadow: 0 0 5px orange; /* Efecto de brillo */
+}
+
+.user_details {
+    display: inline-flex; /* Ajustar el ancho al contenido */
+    align-items: center; /* Alinear verticalmente los elementos */
+    background-color: gainsboro;
+    padding: 5px; /* Opcional: Añadir un poco de espacio interno */
+    border-radius: 5px; /* Opcional: Bordes redondeados */
+}
+
+.img_user_details{
+    width:50px;
+    height:50px;
+    border-radius:30px;
+}
+
+.nom_user_details{
+    margin-left:10px;
+    color:white;
 }
 
 /* ESTRELLAS DETAILS */
