--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -31,6 +31,7 @@
     <script src = "view/js/menu.js"></script>
     <script src="module/search/model/ctrl_search.js"></script>
     <script src = "view/js/main.js"></script>
+    <script src = "view/js/activity.js"></script>
     <!-- OWL CAROUSEL -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"> -->
