--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -30,6 +30,7 @@
     <script src = "view/js/menu.js"></script>
     <script src="module/search/model/ctrl_search.js"></script>
     <script src = "view/js/main.js"></script>
+    <script src = "view/js/activity.js"></script>
     <!-- OWL CAROUSEL -->
     <link rel="stylesheet" type="text/css" href="view/css/owl.carousel.min.css">
     <link rel="stylesheet" type="text/css" href="view/css/owl.theme.default.min.css">
