--- a/view/inc/top_page_auth.html
+++ b/view/inc/top_page_auth.html
@@ -31,6 +31,7 @@
     <script src = "module/AUTH/model/ctrl_register.js"></script>
     <script src = "module/AUTH/model/ctrl_login.js"></script>
     <script src = "view/js/main.js"></script>
+    <script src = "view/js/activity.js"></script>
     <!-- CSS MIO -->
     <link rel="stylesheet" href="view/css/menu.css">
     <link rel="stylesheet" href="view/css/global.css">
