--- a/module/AUTH/view/login.html
+++ b/module/AUTH/view/login.html
@@ -11,6 +11,9 @@
             <input type="password" id="password" name="password" placeholder="Introduce tu contraseña">
             <span id="error_pwd_log" class="error"></span>
         </div>
+        <div class="form-group">
+            <span id="timeout_sesion"></span>
+        </div>
         <button type="submit" class="login-button">Iniciar Sesión</button>
         <button type="button" class="google-login-button">
             <img src="view/images/icons/google-icon.webp" alt="Google Logo">
