ADD carouselPrincipal home

--- a/module/home/view/home.html
+++ b/module/home/view/home.html
@@ -1,3 +1,8 @@
+<!-- CAROUSEL PRINCIPAL -->
+<div class="home-demo">
+    <div class="owl-carousel owl-theme carousel-home-principal"></div>
+</div>
+
 <!-- CAROUSEL HOME -->
 <div id="carousel-principal">
     <div class="home-demo">
