--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -24,6 +24,9 @@
     <!-- SweetAlert2 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.9/sweetalert2.min.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <!-- TOASTR -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <!-- JavaScript MVC files -->
     <script src="view/js/ajaxpromise.js"></script>
     <script src="module/shop/model/ctrl_shop.js"></script>
